# cloud.ru-hackathon

./: .gitignore  .lintstagedrc.yml  .prettierrc  README.md  components.json  eslint.config.js  example.env  index.html  package.json  tailwind.config.js  vite.config.ts
.husky/: pre-commit
agent/: MCP_GUIDE.md  README.md  agui-agent-example.json  langgraph.json  pyproject.toml  server.py  simple.py
mcp_servers/mcp-1c-hack/: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  env_options.json  manager.py  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  parser.py  pyproject.toml  query_tool.py  requirements.txt  server.py
mcp_servers/mcp-1c-hack/odata_tool/: __init__.py  exceptions.py  filter_builder.py  filter_parser.py  llm_client.py  metadata.py  models.py  odata_client.py  plan_validator.py  prompts.py  url_builder.py
mcp_servers/mcp-1c-hack/tests/: test_filter_builder.py  test_query_tool.py  test_url_encoding.py
mcp_servers/mcp-1c-hack/tools/: list_entities.py  navigation.py  query_data.py  utils.py
mcp_servers/opensearch-service/: .env.example  1c_support_knowledge_base.txt  DOCS.md  Dockerfile  MCP_GUIDE.md  README.md  docker-compose.yml  env.example  env_options.json  mcp_config_example.json  mcp_instance.py  mcp_server.py  mcp_tools.json  requirements.txt  server.py  test_mcp.py
mcp_servers/opensearch-service/scripts/: index_makar_cloud_semantic.py  opensearch_config.py
mcp_servers/opensearch-service/tools/: ask_question.py  opensearch_services.py  utils.py  (+2 more)
src/: index.css  main.tsx
src/app/: router.tsx
(+42 files in other folders)
